added last word from GameFragment

--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -65,5 +65,9 @@
             android:name="score"
             android:defaultValue="0"
             app:argType="integer" />
+        <argument
+            android:name="lastWord"
+            app:argType="string"
+            android:defaultValue="words" />
     </fragment>
 </navigation>
