change text display color

--- a/app/src/main/res/layout/title_fragment.xml
+++ b/app/src/main/res/layout/title_fragment.xml
@@ -59,7 +59,7 @@
             android:layout_marginTop="31dp"
             android:fontFamily="sans-serif"
             android:text="Maghfirah Tenri Sumpala Zani "
-            android:textColor="#80C183"
+            android:textColor="#319C8C"
             android:textSize="19sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -91,7 +91,8 @@
             android:layout_marginTop="11dp"
             android:fontFamily="sans-serif"
             android:text="D121181520"
-            android:textColor="#80C183"
+            android:textColor="#319C8C"
+            android:textSize="19sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
