--- a/app/src/main/res/layout/score_fragment.xml
+++ b/app/src/main/res/layout/score_fragment.xml
@@ -79,8 +79,8 @@
             android:layout_marginBottom="176dp"
             android:fontFamily="sans-serif"
             android:textColor="@color/black_text_color"
-            android:textSize="24sp"
-            android:textStyle="bold"
+            android:textSize="25sp"
+            android:textStyle="normal"
             app:layout_constraintBottom_toTopOf="@+id/play_again_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.507"
@@ -96,8 +96,8 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="228dp"
             android:text="Your Last Word:"
-            android:textColor="#417A43"
-            android:textSize="18sp"
+            android:textColor="#319C8C"
+            android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/play_again_button"
             app:layout_constraintEnd_toEndOf="parent"
